<resources>
    <string name="app_name">LetsTalks</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_phone_no">Enter Your Phone no</string>
    <string name="enter_your_password">Enter Your password</string>
    <string name="login">login</string>
    <string name="register">REGISTER</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="re_password">Re-Password</string>
    <string name="password">Enter Your Password</string>
    <string name="user_email">Enter Your Email</string>
    <string name="user_id">User Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_click_here">Already Have An Account!Click Here</string>
    <string name="new_user_please_click_here">New user please Click Here</string>
    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>