<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <View
        android:id="@+id/bgview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_wavesignup"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgview"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.787">



        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#EEF4F8"
            android:textSize="40sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_wavesignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DF34A0FA"
            android:orientation="vertical"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_below="@+id/username"
                android:background="#30ffffff"
                android:hint="@string/user_email"
                android:textColorHint="@android:color/background_light"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
                android:drawablePadding="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_below="@+id/email"
                android:background="#30ffffff"
                android:hint="password"
                android:textColorHint="@android:color/background_light"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24" />


            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_style"
                android:text="@string/login"
                android:textColor="#0E0E0E">

            </Button>
            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="32dp"
                android:background="?android:attr/listDivider"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.132">


            </View>
            <TextView
                android:id="@+id/toregd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="@string/new_user_please_click_here"
                android:textColor="#EFE6E6">

            </TextView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>